--- a/4/manifests/mysql/service.yaml
+++ b/4/manifests/mysql/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: oncall-mysql
+  name: mysql
   labels:
     app: mysql
     app.kubernetes.io/name: mysql
