--- a/4/manifests/oncall/config.yaml
+++ b/4/manifests/oncall/config.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -18,7 +17,7 @@ data:
           scheme: mysql+pymysql
           user: root
           password: '1234'
-          host: oncall-mysql
+          host: mysql
           port: 3306
           database: oncall
           charset: utf8
