--- a/4/manifests/oncall/service.yaml
+++ b/4/manifests/oncall/service.yaml
@@ -1,12 +1,14 @@
----
 apiVersion: v1
 kind: Service
 metadata:
   name: oncall
+  labels:
+    app.kubernetes.io/name: oncall
 spec:
   type: ClusterIP
   selector:
     app.kubernetes.io/name: oncall
+    app.kubernetes.io/component: web
   ports:
     - protocol: TCP
       port: 8080
