--- a/5/manifests/mysql/service.yaml
+++ b/5/manifests/mysql/service.yaml
@@ -6,10 +6,18 @@ metadata:
   labels:
     app: mysql
     app.kubernetes.io/name: mysql
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9104"
+    prometheus.io/path: "/metrics"
 spec:
   ports:
     - name: mysql
       port: 3306
+      targetPort: 3306
+    - name: metrics
+      port: 9104
+      targetPort: 9104
   clusterIP: None
   selector:
     app: mysql
