--- a/5/manifests/mysql/statefulset.yaml
+++ b/5/manifests/mysql/statefulset.yaml
@@ -28,6 +28,9 @@ spec:
             - name: data
               mountPath: /var/lib/mysql
               subPath: mysql
+            - name: mysql-init-scripts
+              mountPath: /docker-entrypoint-initdb.d
+              readOnly: true
           resources:
             requests:
               cpu: 300m
@@ -44,6 +47,45 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 2
             timeoutSeconds: 1
+
+        - name: mysqld-exporter
+          image: prom/mysqld-exporter:v0.18.0
+          args:
+            - "--config.my-cnf=/cfg/config.my-cnf"
+          ports:
+            - name: metrics
+              containerPort: 9104
+          volumeMounts:
+            - name: exporter-cfg
+              mountPath: /cfg
+          readinessProbe:
+            httpGet:
+              path: /metrics
+              port: 9104
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 3
+            successThreshold: 1
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: 9104
+            initialDelaySeconds: 30
+            periodSeconds: 20
+            failureThreshold: 3
+          startupProbe:
+            httpGet:
+              path: /metrics
+              port: 9104
+            failureThreshold: 10
+            initialDelaySeconds: 30
+            periodSeconds: 10
       volumes:
         - name: data
           emptyDir: {}
+        - name: mysql-init-scripts
+          configMap:
+            name: mysql-init-scripts
+        - name: exporter-cfg
+          configMap:
+            name: mysql-exporter-cnf
