--- a/5/manifests/oncall/deployment.yaml
+++ b/5/manifests/oncall/deployment.yaml
@@ -36,7 +36,7 @@ spec:
 
       containers:
         - name: oncall
-          image: knucksie/sre-ab-oncall:0.1
+          image: knucksie/sre-ab-oncall:0.3
           env:
             - name: DOCKER_DB_BOOTSTRAP
               value: "1"
@@ -46,6 +46,7 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
+            - containerPort: 9000
           livenessProbe:
             httpGet:
               path: /healthcheck
