--- a/5/manifests/oncall/service.yaml
+++ b/5/manifests/oncall/service.yaml
@@ -4,12 +4,21 @@ metadata:
   name: oncall
   labels:
     app.kubernetes.io/name: oncall
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9000"
+    prometheus.io/path: "/metrics"
 spec:
   type: ClusterIP
   selector:
     app.kubernetes.io/name: oncall
     app.kubernetes.io/component: web
   ports:
-    - protocol: TCP
+    - name: app
+      protocol: TCP
       port: 8080
       targetPort: 8080
+    - name: metrics
+      protocol: TCP
+      port: 9000
+      targetPort: 9000
